--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dat.gui": "^0.7.7",
     "@types/three": "^0.144.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.144.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.3",
